tests/type/non_num_minus_unary.rev
print -"foo" // error: unary operator '-' can only be used on numeric types